syntax = "proto3";
package data_feed;

enum ApiId {
  HEARTBEAT = 0;
  SYMBOL_PRICE_INFO_PUSH = 16;
  SYMBOL_LAST_K_LINE_DATA_PUSH = 17;
  QUERY_SYMBOL_K_LINE_DATA_LIST = 18;
  SYMBOL_MARKET_DEPTH_PUSH = 21;
}

message HeartbeatRequest {}

message HeartbeatResponse {}

enum KLineType {
  KLINE_1_SECONDS = 0;
  KLINE_1_MINUTES = 1;
  KLINE_3_MINUTES = 2;
  KLINE_5_MINUTES = 3;
  KLINE_10_MINUTES = 4;
  KLINE_15_MINUTES = 5;
  KLINE_30_MINUTES = 6;
  KLINE_60_MINUTES = 7;
  KLINE_1_DAYS = 8;
}

// SYMBOL_LAST_K_LINE_DATA_PUSH  client_request
message SubscribeSymbolLastKLineData {
  int32 subscribe = 1;        //注册、注销
  string symbol = 2;          //产品
  KLineType k_line_type = 3;  // K线类型
}

// SYMBOL_LAST_K_LINE_DATA_PUSH  server_response
message SymbolLastKLineDataPush {
  string symbol = 1;          //产品
  KLineType k_line_type = 2;  // K线类型
  int64 date_time = 3;        // K线时间
  float open_price = 4;       //开盘价
  float close_price = 5;      //收盘价
  float high_price = 6;       //最高价
  float low_price = 7;        //最低价
  int32 volume = 8;           //成交量
  int64 time_stamp = 9;       //最新时间
  float bid_price = 10;       //买一价
  float ask_price = 11;       //卖一价
}

message KLineData {
  int64 date_time = 1;    // K线时间
  float open_price = 2;   //开盘价
  float close_price = 3;  //收盘价
  float high_price = 4;   //最高价
  float low_price = 5;    //最低价
  int32 volume = 6;       //成交量
}

// QUERY_SYMBOL_K_LINE_DATA_LIST  client_request
message QuerySymbolKLineDataListRequest {
  int32 request_id = 1;
  string symbol = 2;          //产品
  KLineType k_line_type = 3;  // K线类型
  int32 auto_subscribe = 4;   //自动订阅register_symbol_last_k_line_data
}

// QUERY_SYMBOL_K_LINE_DATA_LIST  server_response
message QuerySymbolKLineDataListResponse {
  int32 request_id = 1;
  string symbol = 2;                   //产品
  KLineType k_line_type = 3;           // K线类型
  repeated KLineData k_line_list = 4;  // K线列表
}

// SYMBOL_PRICE_INFO_PUSH  client_request
message SubscribeSymbolPriceInfo {
  int32 subscribe = 1;         //注册、注销
  repeated string symbol = 2;  //产品列表
}

// SYMBOL_PRICE_INFO_PUSH  server_response
message SymbolPriceInfoPush {
  string symbol = 1;           //产品
  int64 time_stamp = 2;        //行情时间
  float last_price = 3;        //最新价
  int32 last_qty = 4;          //最新成交数量
  float prev_close_price = 5;  //昨收盘
  float open_price = 6;        //开盘价
  float high_price = 7;        //最高价
  float low_price = 8;         //最低价
  int32 volume = 9;            //总成交量
  float bid_price = 10;        //买一价
  float ask_price = 11;        //卖一价
  int32 bid_size = 12;         ///买一量
  int32 ask_size = 13;         ///卖一量
  int32 decimal = 14;          ///小数位
}

// SYMBOL_MARKET_DEPTH_PUSH  client_request
message SubscribeSymbolMarketDepth {
  int32 subscribe = 1;         //注册、注销
  repeated string symbol = 2;  //产品列表
}

message MarketDepthData {
  float price = 1;
  int32 qty = 2;
}

// SYMBOL_MARKET_DEPTH_PUSH  server_response
message SymbolMarketDepthPush {
  string symbol = 1;
  repeated MarketDepthData bid = 2;
  repeated MarketDepthData ask = 3;
}
